--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ auto: true
 safe: true
 server: true
 server_port: 4000
-baseurl: /
+baseurl: /php-the-right-way/
 url: http://localhost:4000
 
 pygments: true
